# STREAM-1D

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  _cov_patch.py  apt.txt  build_wasm.sh  cargo_build_out.txt  cargo_test_bridge.txt  codecov.yml  dump_uncovered_snippets.py  git_commit_push.sh  index.html  parse_lcov_tmp.py  parse_patch_uncovered.py  patch_diff.txt  postBuild  pyproject.toml  requirements.txt  roadway_test_out.txt  server.mjs  tech_spec.md  unc_bridge_interior.txt  unc_densify.txt  unc_steady.txt  unc_unsteady.txt  uncovered_snippets.txt  worker.js
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
docs/: BRIDGE_INTERIOR_SECTIONS_API.md  README.md  wasm_api.types.ts  wasm_integration.md  web_gui_culvert_integration.md  web_gui_culvert_tier1.md  web_gui_tributary_junction.md
docs/development/: bridge_extensions.md  bridge_ice_debris.md  bridge_reverse_flow_rating.md  deck_vents_slotted_openings.md  densify_modifier_inheritance.md  extended_pier_shape_catalog.md  migration_v19_v20_roadway_embankment.md  pier_footings_nosing.md  pier_tapered_width.md  pressure_weir_combined_flow_audit.md  publishing.md  roadway_embankment_unified.md  tech_spec.md  testing.md  unsteady_implicit_bridge_coupling.md  unsteady_structure_coupling.md
docs/python/: getting_started.md
docs/reference/: api_changelog.md  equations.md  hecras_parity.md
docs/web/: wasm_integration.md
examples/: Issaquah01_profiles.json  Issaquah01_stream1d.json
examples/wasm/: bridge_smoke_test.mjs  node_smoke_test.mjs  steady_bridge_bu_bd_v22.json  worker_solve_steady.mjs
python/: stream1d_verification.ipynb  streams1d_verification.ipynb  test_hecras_culvert_verification.py  test_issaquah01_bridge_parity.py  test_python_bindings.py  test_stream1d.py  test_streams1d.py
python/stream1d/: __init__.py  import_utils.py
python/streams1d/: __init__.py
python/verification/: README.md  bridge_abutment_hecras.json  bridge_guide_bank_contraction.json  bridge_roadway_embankment.json
scripts/: checkpoint_commit_and_pr.sh  checkpoint_phase23_commit_pr.sh  checkpoint_web_checklist_pr.sh  fix_bridge_modules.py  install_git_hooks.sh  run_coverage.sh  run_verification_notebook.py  run_verification_notebook.sh  split_bridge_solver.py  split_bridge_tests.py
src/: json_api.rs  lib.rs  python_bindings.rs  utils.rs  wasm_api.rs  wasm_bindings.rs
src/geometry/: densify.rs  guide_banks.rs  ineffective_serde.rs  mod.rs  processor.rs
src/solvers/: bridge.rs  bridge_abutment.rs  culvert.rs  (+12 more)
tests/: baldeagle_regression_verification.rs  bridge_abutment_hecras_verification.rs  bridge_bu_bd_hecras_verification.rs  bridge_friction_weighting_hecras_verification.rs  bridge_guide_bank_contraction_verification.rs  bridge_high_flow_hecras_verification.rs  bridge_opening_alignment_verification.rs  bridge_reverse_flow_rating_verification.rs  bridge_roadway_embankment_verification.rs  culvert_hecras_verification.rs  wasm_json_contract.rs
tools/: fix.awk  fix24.py  fix38.py  fix_imports.py  fix_mod_lines.py  fix_obs.py  fixhash.awk  patch_cross_section_coeffs.py  promote_solver_fns.py  pub_fields.py  test_exports.py  write_mod.py  write_tail.py
verification/: README.md  manifest.json  requirements-oracle-hecras.txt  run.sh
(+261 files in other folders)
