[package]
name = "streams1d"
version = "0.1.0"
edition = "2021"
description = "Stateless Transferable River Engine for Analysis of Modeling Systems (in 1D)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
cfg-if = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
