[package]
name = "stream1d"
version = "0.1.1"
edition = "2021"
description = "STREAM-1D: stateless 1D open-channel hydraulics engine (WASM and Python)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
cfg-if = "1.0"
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37"], optional = true }

[features]
python = ["dep:pyo3"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = "1.0"
