[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "streams1d"
version = "0.1.0"
description = "Stateless open-channel and river hydraulics solver"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "streams1d._streams1d"
