[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "stream1d"
version = "0.1.1"
description = "Stateless open-channel and river hydraulics solver"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "stream1d._stream1d"

[tool.maturin.generate-ci.github]
trusted-publishing = true
publishing-environment = "pypi"
